--- a/index.html
+++ b/index.html
@@ -6,255 +6,21 @@
 
     <link rel="stylesheet/roole" type="text/css" href="style/style.roo">
     <script src="style/roole.min.js"></script>
+
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="style/handlebars.js"></script>
 </head>
 
 <body>
-<nav class="mainNav">
-    <a href="https://plus.google.com/u/0/up/search" id="navUser"> +User </a>
-    <a href="https://www.google.com.ua/webhp?hl=uk&tab=mw"> Пошук </a>
-    <a href="http://www.google.com.ua/imghp?hl=uk&tab=mi"> Зображення </a>
-    <a href="https://maps.google.com.ua/maps?hl=uk&tab=ml"> Карти </a>
-    <a href="https://www.youtube.com/?tab=m1"> YouTube </a>
-    <a href="https://news.google.com.ua/nwshp?hl=uk&tab=mn"> Новини </a>
-    <a href="https://mail.google.com/mail/u/0/?tab=mm#inbox" class="active"> Gmail </a>
-    <a href="https://drive.google.com/?tab=mo&authuser=0#my-drive"> Диск </a>
-    <a href="https://www.google.com/calendar/render?tab=mc&pli=1"> Календар </a>
-    <a href="http://www.google.com/intl/uk/about/products/"> Більше </a>
-</nav>
+<script>
+    var template = $.get("page.hbs"),
+            data = $.get("data.json");
 
-<div class="googleMenu">
-    <a id="logo" href="https://mail.google.com/mail/u/0/?shva=1#inbox"><img src="style/img/logo.png"/></a>
-
-    <form class="search">
-        <label for="field"></label><input id="field" name="field" type="text"/>
-        <input id="submit" name="submit" type="submit"/>
-    </form>
-
-    <div class="plusmenu">
-        <span><a id="user" href="https://plus.google.com/u/0/115239898719183516051/posts"> user </a></span>
-        <button type="button" title="Сповіщення"><img src="style/img/notification.png"/></button>
-        <a href="https://plus.google.com/u/0/?hl=uk"><img src="style/img/share.png"></a>
-        <a href="https://plus.google.com/u/0/115239898719183516051/posts"><img src="style/img/photo.png"/></a>
-    </div>
-</div>
-
-<nav class="mailNav">
-    <button type="button" id="gmailLogo"><img src="style/img/gmail.png"/></button>
-    <div class="letterOption">
-        <button type="button" title="Вибрати"><img src="style/img/choose.png"/></button>
-        <button type="button" title="Оновити"><img src="style/img/restore.png"/></button>
-        <a href="#"><img src="style/img/more.png"/></a>
-    </div>
-    <a id="letterNumber" href="#"><b>1-...</b> із <b>... </b></a>
-    <div class="letterGide">
-        <a href="#" title="Старіші"><img src="style/img/older.png"></a><a href="#" title="Новіші"><img src="style/img/resent.png"></a>
-        <button type="button" title="Налаштування"><img src="style/img/propertise.png"/></button>
-    </div>
-</nav>
-
-<aside>
-    <button type="button" id="writeButton"><img src="style/img/write.png"/></button><br/>
-    <nav class="letterNav">
-        <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні" class="active"> Вхідні </a> <br/>
-        <a href="https://mail.google.com/mail/u/0/?shva=1#all" title="Уся пошта">  Уся пошта </a> <br/>
-        <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні"> Більше </a>
-    </nav>
-    <a href="#" id="chat"><img src="style/img/chat.png" title="Чат"/></a>
-</aside>
-
-<section>
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">LiveJournal</div>
-        <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/blank.png"></div>
-            <div class="whenDate">11:23</div>
-        </div>
-
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">LiveJournal</div>
-        <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/blank.png"></div>
-            <div class="whenDate">09:06 </div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">Коментар true_bilka в LJ</div>
-        <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/chat-black.png"></div>
-            <div class="whenDate">3 трав.</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">art-shkola2013 (4)</div>
-        <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/blank.png"></div>
-            <div class="whenDate">3 трав.</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">LinkedIn Connections</div>
-        <div class="letterTheme">See Julius's connections, experience, and more...</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/file.png"></div>
-            <div class="whenDate">1 трав.</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">Dropbox Congrats!</div>
-        <div class="letterTheme">You've got Dropbox albums!</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/blank.png"></div>
-            <div class="whenDate">1 трав.</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">Лілія Веомі</div>
-        <div class="letterTheme">Fwd:</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/chat-black.png"></div>
-            <div class="whenDate">29.04.13</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">Сушко, я (22)</div>
-        <div class="letterTheme">(без теми)</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/file.png"></div>
-            <div class="whenDate">05.12.12</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">LiveJournal</div>
-        <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/blank.png"></div>
-            <div class="whenDate">11:23</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">LiveJournal</div>
-        <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/blank.png"></div>
-            <div class="whenDate">09:06 </div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">Коментар true_bilka в LJ</div>
-        <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/chat-black.png"></div>
-            <div class="whenDate">3 трав.</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">art-shkola2013 (4)</div>
-        <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/blank.png"></div>
-            <div class="whenDate">3 трав.</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">LinkedIn Connections</div>
-        <div class="letterTheme">See Julius's connections, experience, and more...</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/file.png"></div>
-            <div class="whenDate">1 трав.</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">Dropbox Congrats!</div>
-        <div class="letterTheme">You've got Dropbox albums!</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/blank.png"></div>
-            <div class="whenDate">1 трав.</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">Лілія Веомі</div>
-        <div class="letterTheme">Fwd:</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/chat-black.png"></div>
-            <div class="whenDate">29.04.13</div>
-        </div>
-    </div>
-
-    <div class="letterInfo">
-        <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">Сушко, я (22)</div>
-        <div class="letterTheme">(без теми)</div>
-        <div class="a-w">
-            <div class="addOns"><img src="style/img/file.png"></div>
-            <div class="whenDate">05.12.12</div>
-        </div>
-    </div>
-
-
-    <footer>
-        <div id="usingMemory">
-            <b>Використано 1%</b><br/>
-            Використовується 0,1 Гб з 10,1 Гб
-        </div>
-
-        <div id="copyright">
-            &copy; Google,2013 - <a href="http://mail.google.com/mail/help/intl/uk/terms.html">Умови та конфіденційність</a>
-        </div>
-
-        <div id="lastDid">
-            Остання діяльність в обліковому записі: 41 хв. тому <br/><a href="https://mail.google.com/mail/u/0/?ui=2&ik=8e13ba2dc8&view=ac">Подробиці</a>
-        </div>
-    </footer>
-</section>
+    $.when(template, data)
+            .then (function (template, data) {
+        var result = Handlebars.compile(template[0])(data[0]);
+        $("body").append(result);
+    })
+</script>
 </body>
 </html>
