--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>gmail</title>
 
     <link rel="stylesheet/roole" type="text/css" href="style/style.roo">
-    <script src="style/roole.min.js"></script>
+    <script src="script/roole.min.js"></script>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="style/handlebars.js"></script>
+    <script src="script/handlebars.js"></script>
 </head>
 
 <body>
