--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>gmail</title>
 
     <link rel="stylesheet/roole" type="text/css" href="style/style.roo">
+    <link rel="stylesheet/roole" type="text/css" href="blocks/commonGoogleMenu/style/commonGoogleMenu.roo">
+
+
     <script src="script/roole.min.js"></script>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -12,15 +15,29 @@
 </head>
 
 <body>
-<script>
-    var template = $.get("page.hbs"),
-            data = $.get("data.json");
 
-    $.when(template, data)
-            .then (function (template, data) {
-        var result = Handlebars.compile(template[0])(data[0]);
-        $("body").append(result);
-    })
-</script>
+
+
+    <script>
+        var template = $.get("page.hbs"),
+                data = $.get("data.json");
+
+        $.when(template, data)
+                .then (function (template, data) {
+                    var result = Handlebars.compile(template[0])(data[0]);
+                    $("body").append(result);
+                })
+
+                .then (function (){
+                    var template = $.get("blocks/commonGoogleMenu/commonGoogleMenu.hbs"),
+                            data = $.get("blocks/commonGoogleMenu/commonGoogleMenu.json");
+
+                    $.when(template, data)
+                        .then (function (template, data) {
+                            var result = Handlebars.compile(template[0])(data[0]);
+                            $("#commonGoogleNav").append(result);
+                        })
+                })
+    </script>
 </body>
 </html>
