--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <link rel="stylesheet/roole" type="text/css" href="style/sceleton.roo">
     <link rel="stylesheet/roole" type="text/css" href="style/style.roo">
-    <link rel="stylesheet/roole" type="text/css" href="blocks/commonGoogleMenu/style/commonGoogleMenu.roo">
+    <link rel="stylesheet/roole" type="text/css" href="style/commonGoogleMenu.roo">
+    <link rel="stylesheet/roole" type="text/css" href="style/mailList.roo">
+    <link rel="stylesheet/roole" type="text/css" href="style/search.roo">
+    <link rel="stylesheet/roole" type="text/css" href="style/mailFilters.roo">
 
 
     <script src="script/roole.min.js"></script>
