--- a/letter.html
+++ b/letter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Gmail</title>
+    <title>LG - name@gmail.com - Gmail</title>
     <meta charset="utf-8">
 
 
