--- a/letter.html
+++ b/letter.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet/roole" type="text/css" href="style/footer.roo"/>
 
     <script src="script/roole.min.js"></script>
-
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="bootstrap/js/jquery-2.0.0.min.js"></script>
     <script src="script/handlebars.js"></script>
     <script src="script/hbsHelper.js"></script>
 </head>
